Style: improved SignIn error styling, created EditNameForm base

--- a/src/pages/sign-in/style.scss
+++ b/src/pages/sign-in/style.scss
@@ -57,3 +57,11 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.Error {
+  background-color: #EBC4C4;
+  margin-top: 10px;
+  padding: 10px;
+  border: 2px red solid;
+  color: black;
+}
