--- a/src/pages/user/style.scss
+++ b/src/pages/user/style.scss
@@ -1,3 +1,9 @@
+.header {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 .account {
     display: flex;
     justify-content: space-between;
