--- a/src/pages/home/style.scss
+++ b/src/pages/home/style.scss
@@ -1,10 +1,17 @@
-.hero {
-    background-image: url('../img/bank-tree.jpeg');
-    background-position: 0 -50px;
-    background-size: cover;
-    background-repeat: no-repeat;
+  .hero {
+    overflow: hidden;
     height: 300px;
     position: relative;
+  }
+
+  .hero-img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
   }
   
   .hero-content {
