--- a/src/components/EditNameForm/style.scss
+++ b/src/components/EditNameForm/style.scss
@@ -1,46 +1,46 @@
 .edit-name-form {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 6px;
-    width: 60%;
-    height: 250px;
-    border: 1px solid black;
-    background-color: #fff;
-    margin: 0 auto;
-    padding: 1.5rem;
-    box-sizing: border-box;
-    text-align: left;
-    margin-bottom: 2rem;
-    font-size: 1rem;
-    color: #2c3e50;
-}
-.label-editName {
-    padding-right: 10px;
-    margin-bottom: 20px;
-}
-input {
-    padding: 5px;
-    border-radius: 8px;
-}
-.input-wrapper-editName {
-    margin-bottom: 10px;
-}
-.container-button {
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    width: 100%;
-}
-button {
-    width: 50%;
-    height: 40px;
-    padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 6px;
+  width: 80%;
+  min-height: 250px;
+  border: 1px solid black;
+  background-color: #fff;
+  margin: 0 auto;
+  padding: 1.5rem;
+  box-sizing: border-box;
+  text-align: left;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  color: #2c3e50;
 }
 
+input {
+  padding: 5px;
+  border-radius: 8px;
+  margin-top: 5px;
+}
+.input-wrapper-editName {
+  margin-bottom: 10px;
+}
+.container-button {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  width: 100%;
+}
+.button-edit-form {
+  width: 50%;
+  padding: 6px;
+}
+@media (min-width: 720px) {
+  .edit-name-form {
+    width: 50%;
+    max-width: 400px;
+  }
+  .label-editName {
+    padding-right: 10px;
+  }
+}
