--- a/src/pages/user/style.scss
+++ b/src/pages/user/style.scss
@@ -42,28 +42,20 @@
   }
   
   .edit-button {
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
-    font-weight: bold;
-    padding: 10px;
+    padding: 7px;
+    width: 30%;
+    margin-bottom: 2rem;
   }
   
   .header {
     color: #fff;
-    margin-bottom: 2rem;
   }
   
   .transaction-button {
     display: block;
     width: 100%;
     padding: 8px;
-    font-size: 1.1rem;
-    font-weight: bold;
     margin-top: 1rem;
-    border-color: #00bc77;
-    background-color: #00bc77;
-    color: #fff;
   }
   
   @media (min-width: 720px) {
@@ -74,7 +66,7 @@
     .account-content-wrapper.cta {
       flex: 0;
     }
-  
+
     .transaction-button {
       width: 200px;
     }
